all sections added. need to fix some layout issues and responsiveness

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -231,3 +231,43 @@ section {
     margin-top: 46px;
 }
 
+.section_testimonial {
+    background-image: url("/images/man_large.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    min-height: 731px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonial_wrapper {
+    display: flex;
+    width: 70%;
+    max-height: 287px;
+    height: 100%;
+    margin-top: 50px;
+}
+
+.testimonial_wrapper_right {
+    margin: 30px;
+}
+
+footer {
+    background-color: colors.$color_dark;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 271px;
+    height: 100%;
+}
+
+.footer_links {
+    display: flex;
+    min-width: 166px;
+    justify-content: space-between;
+}
